<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/configs_theme_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.launchkey.android.authenticator.demo.ui.fragment.AppConfigsThemeFragment"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/configs_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_activity_list_feature_config_sdk_key" />

                <EditText
                    android:id="@+id/configs_sdk_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/theming_button_name" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_ssl_pinning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_ssl_pinning"
                android:theme="@style/AppTheme.AppConfigs" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_pc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_pc"
                android:theme="@style/AppTheme.AppConfigs" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_cc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_cc"
                android:theme="@style/AppTheme.AppConfigs" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_w"
                android:theme="@style/AppTheme.AppConfigs" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_l"
                android:theme="@style/AppTheme.AppConfigs" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_fs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_fs"
                android:theme="@style/AppTheme.AppConfigs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_activity_list_feature_config_delay_w" />

                <EditText
                    android:id="@+id/configs_delay_wearables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_activity_list_feature_config_delay_l" />

                <EditText
                    android:id="@+id/configs_delay_locations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/demo_activity_list_feature_config_authfailure" />

                <EditText
                    android:id="@+id/configs_authfailure"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:inputType="number" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/demo_activity_list_feature_config_autounlink" />

                <EditText
                    android:id="@+id/configs_autounlink"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:inputType="number" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/AppTheme.AppConfigs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/demo_activity_list_feature_config_autounlinkwarning" />

                <EditText
                    android:id="@+id/configs_autounlinkwarning"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:inputType="number" />
            </FrameLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/configs_allowchangesunlinked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/demo_activity_list_feature_config_secchangesunlinked"
                android:theme="@style/AppTheme.AppConfigs" />

            <TextView
                android:id="@+id/configs_endpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:visibility="gone"
                tools:text="https://mapi.launchkey.com"
                tools:visibility="visible" />

            <Button
                android:id="@+id/configs_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/demo_activity_list_feature_config_reinit" />

            <TextView
                android:id="@+id/configs_build_hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>